Pretty much working now